Improved landing layout and fixed layout issues in all views

--- a/src/scss/common/forms.scss
+++ b/src/scss/common/forms.scss
@@ -15,7 +15,6 @@
   border-radius: 6px;
   color: $dark-gray;
   height: 40px;
-  margin-top: 8px;
   padding: 0 12px;
   width: 100%;
 }
